add_compile_options(
	-fobjc-arc
)

add_darling_static_library(utilities FAT
	SOURCES
		src/debugging.c
		src/der_dictionary.c
		src/iCloudKeychainTrace.c
		src/SecCFWrappers.c
		src/SecADWrapper.c
		src/der_date.c
		src/fileIo.c
		src/SecFileLocations.c
		src/SecDb.c
		src/SecCoreCrypto.c
		src/SecAppleAnchor.c
		#src/iOSforOSX-SecAttr.c
		src/SecTrace.c
		src/der_plist_internal.c
		src/SecSCTUtils.c
		src/der_number.c
		src/iOSforOSX-SecRandom.c
		src/SecCFError.c
		src/der_plist.c
		src/SecCertificateTrace.c
		src/SecAKSWrappers.c
		src/der_array.c
		src/SecCFCCWrappers.c
		src/NSURL+SOSPlistStore.m
		src/der_string.c
		src/der_boolean.c
		src/der_data.c
		src/der_null.c
		src/der_set.c
		src/simulate_crash.c
		src/SecBuffer.c
		src/SecXPCError.c
		SecurityTool/not_on_this_platorm.c
		SecurityTool/readline.c
)

add_subdirectory(SecurityTool)
